# hyphlab

./: .gitignore  Cargo.toml  README.md  methods.toml
crates/hyph-adapters/: Cargo.toml
crates/hyph-adapters/benches/: crate_baselines.rs
crates/hyph-adapters/src/: hypher_adapter.rs  lib.rs  no_hyphen.rs  rust_hyphenation.rs
crates/hyph-cli/: Cargo.toml
crates/hyph-cli/src/: cli.rs  hashing.rs  main.rs  predict.rs  reports.rs  tests.rs  typeset_fragments.rs
crates/hyph-cli/src/commands/: bench_matrix_speed.rs  compare_fold.rs  compile.rs  crf.rs  data.rs  dev.rs  eval.rs  method.rs
crates/hyph-cli/src/guards/: apply.rs  case.rs  mod.rs  proper_names.rs  types.rs
crates/hyph-cli/src/methods/: italian.rs  model_io.rs  registry.rs  safe_ngram_ascii.rs  safe_ngram_grapheme_kernels.rs  safe_ngram_lookup.rs  safe_ngram_method.rs  safe_ngram_orthography.rs  safe_ngram_train.rs  safe_ngram_unicode.rs  types.rs
crates/hyph-core/: Cargo.toml
crates/hyph-core/src/: boundary.rs  language.rs  lib.rs  record.rs  separator.rs  traits.rs
crates/hyph-crf/: Cargo.toml
crates/hyph-crf/src/: lib.rs
crates/hyph-data/: Cargo.toml
crates/hyph-data/src/: io.rs  lib.rs  moby.rs  tsv.rs  wiktextract.rs  wlhamb.rs
crates/hyph-eval/: Cargo.toml
crates/hyph-eval/src/: lib.rs
crates/hyph-patterns/: Cargo.toml
crates/hyph-patterns/src/: liang.rs  lib.rs  parser.rs
data/: README.md
data/challenges/: typeset_no_break_seed.tsv
data/challenges/typeset_no_break/: all.tsv  cs.jsonl.zst  cs.tsv  de.jsonl.zst  de.tsv  en_US.jsonl.zst  en_US.tsv  es.jsonl.zst  es.tsv  it.jsonl.zst  it.tsv  nl.jsonl.zst  nl.tsv  ru.jsonl.zst  ru.tsv  tr.jsonl.zst  tr.tsv
data/curation/guard_policies/: moby_en_us_typeset.toml  wiktextract_cs_typeset.toml  wiktextract_de_typeset.toml  wiktextract_es_typeset.toml  wiktextract_it_typeset.toml  wiktextract_nl_typeset.toml  wiktextract_ru_cyrl_trusted_dedup_typeset.toml  (+1 more)
data/gold/: moby_en_us_typeset.jsonl.zst  toy_en.jsonl
data/manifests/: sources.yaml
docs/: README.md  add_method.md  data_usage.md  evaluation.md  guarded_ngram.md  method_roadmap.md  research_start.md
experiments/: README.md  toy.md
experiments/manifests/: method_workflow_example.toml  moby_en_us_crf_sgd_tuned.toml  moby_en_us_crf_tuned.toml  moby_en_us_precision_recall90_simple.toml  moby_en_us_safe_ngram.toml  moby_en_us_safe_ngram_compiled.toml  moby_en_us_with_crf.toml
experiments/patgen/: en-us.tra  moby_patgen_l1_4.toml
manifests/: baselines.toml
scripts/: build_guarded_ngram_models.sh  curate_moby_typeset.sh  curate_wiktextract_typeset.sh  eval_patterns.sh  fetch_core_data.sh  fetch_guard_challenge_data.sh  fetch_kaikki.sh  import_hyph_bench.sh  import_moby.sh  import_wiktextract.sh  new_native_method.sh  prepare_filtered_wiktextract_data.sh  report_binary_size.sh  run_baseline_matrix.sh  run_benchmarks.sh  run_crf_unified_matrix.sh  run_method_smoke.sh  run_moby_experiment.sh  run_multilingual_5fold_evaluation.sh  run_multilingual_safe_ngram_tuning.sh  run_safe_ngram_compiled.sh  run_safe_ngram_kfold.sh  run_safe_ngram_matrix.sh  run_speed.sh  run_toy_experiment.sh  run_typeset_guard_challenge.sh
tests/fixtures/: external_jsonl_fixture.py  toy_en.patterns  toy_en.tsv  wiktextract_sample.jsonl
(+76 files in other folders)
