[package]
name = "hyph-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
