[package]
name = "hyph-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
hyph-core = { path = "../hyph-core" }
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
zstd.workspace = true
